Minor formatting changes: - Added non breaking spaces to the filter names so as they don't wrap. - Allowed for new lines to be used in filter names. - Fixed CSS issue with analysis table width changing on hover.

--- a/src/styles.mod.css
+++ b/src/styles.mod.css
@@ -50,7 +50,7 @@ table.analysis
   tr.filter_skipped:hover td {background: #FFB5B5;}
 
 table.analysis_run           {cursor: pointer;}
-table.analysis_run:hover     {border: 3px double #000; margin: 0px;}
+table.analysis_run:hover     {border: 3px double #000; margin: 0px; width: 304px}
 table.analysis_run:hover
   tr.message                 {display: table-row;}
 table.analysis_run th        {background: #B0E0B0;}
